add new features

--- a/galarry.html
+++ b/galarry.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to our foto galarry</h1>
+        <h1>Welcome to our photo galarry</h1>
     </header>
     <main>
        <section id="galarry">
@@ -60,7 +60,7 @@
         </div>
         <div class="photos">
             <a href="image-gallary/galarry-eleven.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-eleven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p>Retrato do melhor jogador e marcador do campeonato <strong>EU AMO CAPOLO II</strong>, ou seja do melhor jogador do Capolo Djiby é tudo nosso. 03.09.2023</p>
+            <p>Retrato do melhor jogador e marcador do campeonato <strong>EU AMO CAPOLO II</strong>, ou seja do melhor jogador do Capolo-II <strong>Djiby</strong> é tudo nosso. 03.09.2023</p>
 
         </div>
         <div class="photos">
