--- a/homemenu.html
+++ b/homemenu.html
@@ -52,6 +52,7 @@
                     menumobile.style.display = 'block';
                 }
             }
+            window.alert('Seja Bem-Vindo ao site oficial do Fc Galácticos');
         </script>
 </body>
 </html>
