--- a/galarry.html
+++ b/galarry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foto Galarry</title>
+    <title>Photo Galarry</title>
     <link rel="stylesheet" href="gallary/galarrystyle.css">
     <link rel="shortcut icon" href="image/galactico.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
