--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,41 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-twenty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Com este elenco podes acreditar é muita mágia porque os jovens são bom de bola, <strong>Djiby, Dos Brancos, Mata-Puta, Ney e Camavinga,</strong> tudo nosso!</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-three.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">O menino <strong>Camavinga</strong> é nossa jóia, depois de uma longa batalha.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"> Os dois <strong>Cracks</strong> Ney e Djiby é muita qualidade na final, é tudo nosso!</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-six.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Nossa <strong>Mamoite</strong> não deixou de comemorar com a equipa, Luguinha, Ney, Mane-G, Djiby, Safado e Faraó.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-two.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-two.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Mata-Puta</strong> fez a comemoração com o seu novo bebé no seu lado esquerdo.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-four.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">O experiente <strong>Mamesso</strong> e menino <strong>Lisandro</strong> nova jóia do Fc Galácticos.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-five.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-five.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">No retrato temos Hery, Faraó, Safado e Ney na continuidade da comemoração tudo nosso!</p>
+
+        </div>
+        <div class="photos">
             <a href="image-gallary/galarry-twenty-three.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Os adeptos também fizeram parte da grande conquista e comemoraram com os melhores do Capolo-II <strong>03.09.2023</strong></p>
         </div>
@@ -37,7 +72,7 @@
             <p class="description">03.09.2023 dia da final; o <strong>Fc Galácticos</strong> para além do título, conquistou todos prémios individuais: Melhor treinador, defesa, balizeiro, marcador e jogador é tudo nosso! Coroa, Djiby e Ney.</p>
         </div>
         <div class="photos">
-            <a href="image-gallary/galary-eighteen.jpg" target="_blank" rel="next"><img src="image-gallary/galary-eighteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <a href="image-gallary/galarry-twenty-nine.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Capitão <strong>Ney</strong> que levou os seus colegas rumo a mas uma conquista, mereceu um prémio individual é tudo nosso!</p>
         </div>
         <div class="photos">
