--- a/galarry.html
+++ b/galarry.html
@@ -19,8 +19,19 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-twenty-eigth.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-eigth.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Momentos antes do inicio do jogo da final é família <strong>Galácticos</strong> que leva tanta mordura humana no campo.</p>
+            
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-fourteen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-fourteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Melhor treinador <strong>Coroa</strong> mereceu o seu prémio individual.</p>
+
+        </div>
+        <div class="photos">
             <a href="image-gallary/galarry-twenty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Com este elenco podes acreditar é muita mágia porque os jovens são bom de bola, <strong>Djiby, Dos Brancos, Mata-Puta, Ney e Camavinga,</strong> tudo nosso!</p>
+            <p class="description">Com este elenco podes acreditar é muita mágia em campo, porque os jovens são bom de bola, <strong>Djiby, Dos Brancos, Mata-Puta, Ney e Camavinga,</strong> tudo nosso!</p>
 
         </div>
         <div class="photos">
