--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,25 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-twelve.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twelve.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Coach <strong>Faraó</strong> e o seu capitão Ney, tudo pelo troféu.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-twenty-four.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Era muita felicidade com o novo <strong>troféu</strong> na galeria.</p>
+
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirty-one.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Capitão <strong>Ney</strong> e o seu novo troféu.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/galarry-thirteen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-thirteen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">O dono de dois prémios individual <strong>Djiby</strong> melhor marcador e jogador.</p>
+
+        </div>
+        <div class="photos">
             <a href="image-gallary/galarry-twenty-eigth.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twenty-eigth.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Momentos antes do inicio do jogo da final é família <strong>Galácticos</strong> que leva tanta mordura humana no campo.</p>
             
