--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,12 @@
     <main>
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/galarry-seventeen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-seventeen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Essa imagem diz tudo de como foi a final.</p>
+
+        </div>
+
+        <div class="photos">
             <a href="image-gallary/galarry-twelve.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-twelve.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Coach <strong>Faraó</strong> e o seu capitão Ney, tudo pelo troféu.</p>
 
