add new feature

--- a/galarry.html
+++ b/galarry.html
@@ -16,8 +16,16 @@
     <header>
         <h1>Welcome to our photo galarry</h1>
     </header>
-    <main>
+    <main id="principal">
        <section id="galarry">
+        <div class="photos">
+            <a href="" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-two.jpg" alt="image-gallary/gallary-forty-five.jpg" width="600" height="400"></a>
+            <p class="description">Menino Jordão com aquecimento de qualidade, ele é bom de bola.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-five.jpg" width="600" height="400" alt="Photo-Galacticos"></a>
+            <p class="description">Oito inicial das meias finais com Mamesso, Djiby, Piranha, Gringo, Ney, Chicha, Dos Brancos e Mane-G é muita qualidade podes acreditar.</p>
+        </div>
         <div class="photos">
             <a href="image-gallary/galarry-seventeen.jpg" target="_blank" rel="next"><img src="image-gallary/galarry-seventeen.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Essa imagem diz tudo de como foi a final.</p>
