--- a/galarry.html
+++ b/galarry.html
@@ -19,8 +19,11 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="" target="_blank" rel="next"><img src="" alt="" width="600" height="400"></a>
+        </div>
+        <div class="photos">
             <a href="" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-two.jpg" alt="image-gallary/gallary-forty-five.jpg" width="600" height="400"></a>
-            <p class="description">Menino Jordão com aquecimento de qualidade, ele é bom de bola.</p>
+            <p class="description">Garoto Jordão com aquecimento de sênior, muita qualidade e bom de bola.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-forty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-five.jpg" width="600" height="400" alt="Photo-Galacticos"></a>
@@ -184,9 +187,6 @@
         <div class="photos">
             <a href="image-gallary/galarry-nine.png" target="_blank" rel="next"><img src="image-gallary/galarry-nine.png" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Retrato do sengundo jogo do campeonato <strong>Eu Amo Kapolo II</strong>, onde têm a técnica do <strong>Kiamesso</strong> e dribles do <strong>Djiby</strong> isso é família Galácticos.</p>
-        </div>
-        <div class="responsive">
-            <!--Colocar as imagens em table-->
         </div>
        </section>
 
