--- a/galarry.html
+++ b/galarry.html
@@ -19,11 +19,44 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
-            <a href="" target="_blank" rel="next"><img src="" alt="" width="600" height="400"></a>
+            <a href="image-gallary/gallary-forty-eight.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-eight.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Mane-G</strong> depois da batalha vencida (Final).</p>
         </div>
         <div class="photos">
-            <a href="" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-two.jpg" alt="image-gallary/gallary-forty-five.jpg" width="600" height="400"></a>
-            <p class="description">Garoto Jordão com aquecimento de sênior, muita qualidade e bom de bola.</p>
+            <a href="image-gallary/gallary-fifty.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Safado, Da Fanta, Camavinga, Cowboy e Dos Brancos</strong> aquecimento para meias finais .</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-three.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Cowboy, Mata-Puta, Seny e Mamesso</strong> com aquecimento que dá medo.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-six.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Mane-G, Dos Brancos e Da Fanta</strong> é junção de muita habilidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-one.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>John Cash</strong> é garoto com muita qualidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-nine.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Mane-G</strong> a posição da foto diz tudo, ele é nossa casa forte tem muita qualidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-eight.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-eight.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Central com muita qualidade <strong>Gringo</strong> o jovem é mesmo habilidoso.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-four.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Garoto <strong>Dos Brancos</strong> e o experiente Safado ficaram feliz com o novo troféu.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-five.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Garoto <strong>Da Fanta e Dos Brancos</strong> mereceram erguer o troféu, têm qualidade podes crer.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-fifty-two.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-fifty-two.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Garoto <strong>Jordão</strong> com aquecimento de sênior, muita qualidade e bom de bola.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-forty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-five.jpg" width="600" height="400" alt="Photo-Galacticos"></a>
