--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,26 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/gallary-forty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Experiente <strong>Safado</strong> com muita qaulidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-one.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Gringo e Dêncio</strong> pegando o novo bebé.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-nine.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"> Esse crack na imagem é a <strong>Lenda   (Cowboy)</strong> melhor ponta do Capolo-II.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-four.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"> Dois experiente com muita qualidade <strong>Safado e Mamesso</strong> depos de uma final vencida.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-five.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"> o oito da meias finais com <strong>Piranha, Mane-G, Gringo, Dos Brancos, Ney, Chicha, Djiby e Mamesso</strong> foi muita qualidade dentro do campo.</p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-forty-eight.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-eight.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description"><strong>Mane-G</strong> depois da batalha vencida (Final).</p>
         </div>
