--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,30 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/gallary-seventy.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-seventy.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Garatos <strong>Dos Brancos, Da Fanta</strong> e experiente <strong>Coroa</strong> botaram qualidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-seventy-one.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-seventy-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">O trio de qualidade <strong>Coroa, Ney, Djiby</strong> primeiro jogo amistoso feito <strong>17.09.2023</strong> depois de terem vencido a final.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"> O <strong>Dêncio</strong> é da familía.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-two.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-two.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Coach <strong>Degas Boy</strong> com seu jogador <strong>Gringo</strong></p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-three.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Coach mais jovem do Capolo-II <strong>Degas Boy</strong> deixou os campos para passar a sua experiente.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-forty-six.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Os garotos <strong>Diva e Da Fanta</strong> com o experiente <strong>Mamesso</strong>.</p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-forty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-forty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Experiente <strong>Safado</strong> com muita qaulidade.</p>
         </div>
