add photo to my galarry

--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,18 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/gallary-sixty-four.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Mesmo a cair não perde o foco na menina são tácticas, podes acreditar o jovem <strong>Luguinha</strong> tem muita qaulidade</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-five.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Esse é nosso crack <strong>Djiby</strong> aonde passa bota sempre o seu perfume com muita qualidade, a fazer um passe de qualidade ao outro fudido <strong>Mamesso</strong>.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-eight.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-eight.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Pela imagem o pessoal de futebol de rua já sabem o que <strong>Mata-Puta</strong> fez no jogador da equipa adiversária.</p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-seventy.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-seventy.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Garatos <strong>Dos Brancos, Da Fanta</strong> e experiente <strong>Coroa</strong> botaram qualidade.</p>
         </div>
