--- a/galarry.html
+++ b/galarry.html
@@ -19,8 +19,32 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/gallary-sixty-two.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-two.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Na imagem esta os seguintes elementos: <strong>Ballack, Dos Brancos, Jordão, Piranha, Gringo, Camavinga, Da Fanta, Diva, KD e Chicha.</strong></p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-three.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-three.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Esse na imagem é o nosso menino jóia <strong>Diva</strong> já aplicou ao seu adiversário; o puto tem muita qualidade</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-six.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Ney e Mane-G</strong> essa dupla botam muita qaulidade em campo, pela imagem preparou um passe perigoso para o seu colega.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Mata-Puta</strong> já fez das suas o garoto é bom de bola.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-one.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Menino <strong>Dos Brancos</strong> pronto para aplicar é a posição dele favorita, podes acreditar  tem a melhor pisada.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty-nine.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Degas Boy, Faraó e Mata-Puta</strong></p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-sixty-four.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-four.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Mesmo a cair não perde o foco na menina são tácticas, podes acreditar o jovem <strong>Luguinha</strong> tem muita qaulidade</p>
+            <p class="description">Mesmo a cair não perde o foco na menina são tácticas, podes acreditar o jovem <strong>Luguinha</strong> tem muita qualidade</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-sixty-five.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-five.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
