--- a/galarry.html
+++ b/galarry.html
@@ -19,6 +19,22 @@
     <main id="principal">
        <section id="galarry">
         <div class="photos">
+            <a href="image-gallary/gallary-thirty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-thirty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Josué</strong> é da família.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-thirty-eight.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-thirty-eight.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description">Coach <strong>Degas Boy</strong> podes beijar o troféu mereces.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-thirty-nine.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-thirty-nine.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Seny(Ti Penalti)</strong> podes acreditar o jovem tem um pé esquerdo com muita qualidade.</p>
+        </div>
+        <div class="photos">
+            <a href="image-gallary/gallary-sixty.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
+            <p class="description"><strong>Diva</strong> é uma das jóias do clube, garoto destemido.</p>
+        </div>
+        <div class="photos">
             <a href="image-gallary/gallary-sixty-two.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-two.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
             <p class="description">Na imagem esta os seguintes elementos: <strong>Ballack, Dos Brancos, Jordão, Piranha, Gringo, Camavinga, Da Fanta, Diva, KD e Chicha.</strong></p>
         </div>
