change the words

--- a/galarry.html
+++ b/galarry.html
@@ -44,7 +44,7 @@
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-sixty-six.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-six.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description"><strong>Ney e Mane-G</strong> essa dupla botam muita qaulidade em campo, pela imagem preparou um passe perigoso para o seu colega.</p>
+            <p class="description"><strong>Ney e Mane-G</strong> essa dupla botam muita qualidade em campo, pela imagem preparou um passe perigoso para o seu colega.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-sixty-seven.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-sixty-seven.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
