--- a/galarry.html
+++ b/galarry.html
@@ -72,7 +72,7 @@
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-seventy.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-seventy.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
-            <p class="description">Garatos <strong>Dos Brancos, Da Fanta</strong> e experiente <strong>Coroa</strong> botaram qualidade.</p>
+            <p class="description">Garotos <strong>Dos Brancos, Da Fanta</strong> e experiente <strong>Coroa</strong> botaram qualidade.</p>
         </div>
         <div class="photos">
             <a href="image-gallary/gallary-seventy-one.jpg" target="_blank" rel="next"><img src="image-gallary/gallary-seventy-one.jpg" alt="Photo-Galacticos" width="600" height="400"></a>
